// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render completed determinant progress circle 1`] = `
.c0 {
  vertical-align: middle;
  color: #2AAB3F;
  height: 3rem;
  width: 3rem;
}

<div>
  <svg
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    class="c0"
    color="success"
    fill="currentColor"
    height="24"
    role="progressbar"
    size="48"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <title />
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.996.996 0 111.41-1.41L10 14.17l6.88-6.88a.996.996 0 111.41 1.41l-7.59 7.59a.996.996 0 01-1.41 0z"
    />
  </svg>
</div>
`;

exports[`render determinant progress circle 1`] = `
.c0 {
  height: 3rem;
  width: 3rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 138.23007675795088 138.23007675795088;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dashoffset: 69.11503837897544;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

.c3 {
  font-size: 0.875rem;
  font-weight: 400;
}

<div>
  <svg
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <circle
      class="c2"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <text
      class="c3"
      dominant-baseline="central"
      text-anchor="middle"
      x="50%"
      y="50%"
    >
      50
      %
    </text>
  </svg>
</div>
`;

exports[`render error determinant progress circle 1`] = `
.c0 {
  vertical-align: middle;
  color: #DB3643;
  height: 3rem;
  width: 3rem;
}

<div>
  <svg
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    aria-valuetext="Error"
    class="c0"
    color="danger"
    fill="currentColor"
    height="24"
    role="progressbar"
    size="48"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <title />
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 11c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
    />
  </svg>
</div>
`;

exports[`render indeterminant progress bar 1`] = `
.c0 {
  height: 3rem;
  width: 3rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 138.23007675795088 138.23007675795088;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: dpAsNn 1s ease infinite;
  animation: dpAsNn 1s ease infinite;
  stroke-dashoffset: 138.23007675795088;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <circle
      class="c2"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
  </svg>
</div>
`;

exports[`render large progress circle 1`] = `
.c0 {
  height: 5rem;
  width: 5rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.5rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.5rem;
  stroke: #ECEEF5;
  stroke-dasharray: 226.1946710584651 226.1946710584651;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: ibtQPx 1s ease infinite;
  animation: ibtQPx 1s ease infinite;
  stroke-dashoffset: 226.1946710584651;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="2.5rem"
      cy="2.5rem"
      r="2.25rem"
    />
    <circle
      class="c2"
      cx="2.5rem"
      cy="2.5rem"
      r="2.25rem"
    />
  </svg>
</div>
`;

exports[`render medium progress circle 1`] = `
.c0 {
  height: 3rem;
  width: 3rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 138.23007675795088 138.23007675795088;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: dpAsNn 1s ease infinite;
  animation: dpAsNn 1s ease infinite;
  stroke-dashoffset: 138.23007675795088;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <circle
      class="c2"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
  </svg>
</div>
`;

exports[`render small progress circle 1`] = `
.c0 {
  height: 2rem;
  width: 2rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 87.96459430051421 87.96459430051421;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: cYXnLG 1s ease infinite;
  animation: cYXnLG 1s ease infinite;
  stroke-dashoffset: 87.96459430051421;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1rem"
      cy="1rem"
      r="0.875rem"
    />
    <circle
      class="c2"
      cx="1rem"
      cy="1rem"
      r="0.875rem"
    />
  </svg>
</div>
`;

exports[`render xSmall progress circle 1`] = `
.c0 {
  height: 1rem;
  width: 1rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.125rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.125rem;
  stroke: #ECEEF5;
  stroke-dasharray: 43.982297150257104 43.982297150257104;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: cWvsXs 1s ease infinite;
  animation: cWvsXs 1s ease infinite;
  stroke-dashoffset: 43.982297150257104;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="0.5rem"
      cy="0.5rem"
      r="0.4375rem"
    />
    <circle
      class="c2"
      cx="0.5rem"
      cy="0.5rem"
      r="0.4375rem"
    />
  </svg>
</div>
`;
